# infinite-voxel-rt

./: .gitignore  CMakeLists.txt  mani.vox  volume.raw
src/: bbox.h  camera.h  display.cpp  display.h  hitable.h  kernel.cu  main.cu  postprocess.h  ray.h  renderer.h  scene.h  sphere.h  vec3.h  volume.h
src/util/: cu_std.h  device_util.h  error.h  mathlib.h  random.h  vox.h  vox_loader.h
